--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+fastapi = "^0.78.0"
+uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+flake8 = "^4.0.1"
+flake8-builtins = "^1.5.3"
+flake8-docstrings = "^1.6.0"
+flake8-quotes = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
