--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,15 @@ stages:
   - test
   - deploy
 
+only:
+   - main
+
 linting:
   stage: linter
-  image: python:3.8-alpine
+  tags: 
+    - linter
+  image: python:3.8
   script:
     - pip install flake8 flake8-builtins flake8-docstrings flake8-quotes
     - cp setup.cfg
     - flake8 pptpd_admin/
-  only:
-   - main
