--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ stages:
   - test
   - deploy
 
-# only:
-#    - main
 
 linting:
   stage: linter
@@ -16,3 +14,6 @@ linting:
     - pip install flake8 flake8-builtins flake8-docstrings flake8-quotes
     - cp setup.cfg
     - flake8 pptpd_admin/
+
+  only:
+     - main
