--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^4.0.1"
 flake8-builtins = "^1.5.3"
 flake8-docstrings = "^1.6.0"
 flake8-quotes = "^3.3.1"
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
