--- a/pptpd_admin/Dockerfile
+++ b/pptpd_admin/Dockerfile
@@ -2,4 +2,6 @@ FROM python:3.10
 
 COPY . /
 
-RUN pip install .
+RUN pip install -r requirements.txt
+
+CMD uvicorn main:app host 0.0.0.0 port 8000 --workers 2 --reload
