--- a/pptpd_admin/Dockerfile
+++ b/pptpd_admin/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.10
 
 COPY . /
-
 RUN pip install -r requirements.txt
-
-CMD uvicorn main:app host 0.0.0.0 port 8000 --workers 2 --reload
+EXPOSE 8000
+CMD uvicorn main:app --host 0.0.0.0 --port 8000 --workers 2 --reload
