--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 [flake8]
 max-line-length = 120
 exclude = __pycache__, __init__.py
-ignore = D100, D201, A002, A003, D202
+ignore = D100, D201, A002, A003
+
+[mypy]
+ignore_missing_imports = True
