--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: docker:20.10.16
+
 stages:
   - build
   - linter
@@ -9,7 +11,7 @@ variables:
 
 services:
   - docker:20.10.16-dind
-  
+
 building-backend:
   stage: build
   tags:
