--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: docker:20.10.16
-
 stages:
   - build
   - linter
@@ -9,22 +7,17 @@ stages:
 variables:
   SERVER_DIR: "pptpd_admin/"
 
-services:
-  - docker:20.10.16-dind
-
-building-backend:
-  stage: build
+testing:
+  stage: test
   tags:
-   - build
-  image: ubuntu:20.04
+    - test
+  image: python3.10
   before_script:
-    # - cp -r pptpd_admin /
-    # - cp init_server.sh /
-    - bash init_server.sh
+  - pip3 install toml
+  - python3 converter.py -p $SERVER_DIR -f dev
+  - pip3 install -r requirements.txt
   script:
-    - python3 converter.py -p $SERVER_DIR
-    - cd pptpd_admin/ && docker build . -t test-image
-
+    - cd $SERVER_DIR && uvicorn main:app --host 0.0.0.0 --port 8000 --workers 2 --reload
   only:
     - main
 
