--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ testing:
   stage: test
   tags:
     - test
-  image: python3.10
+  image: python:3.10
   before_script:
   - pip3 install toml
   - python3 converter.py -p $SERVER_DIR -f dev
@@ -30,7 +30,6 @@ linting:
     - pip3 install toml
     - python3 converter.py -p . -f dev
     - pip3 install -r requirements.txt
-    # - cp setup.cfg /
   script:
     - flake8 pptpd_admin/*.py
     - mypy pptpd_admin/*.py
