--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ testing:
   before_script:
   - pip3 install toml
   - python3 converter.py -p $SERVER_DIR -f dev
-  - pip3 install -r requirements.txt
+  - cd $SERVER_DIR && pip3 install -r requirements.txt
   script:
     - cd $SERVER_DIR && uvicorn main:app --host 0.0.0.0 --port 8000 --workers 2 --reload
   only:
