--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ testing:
   - python3 converter.py -p $SERVER_DIR
   - pip3 install -r $SERVER_DIR/requirements.txt
   script:
-    - uvicorn $SERVER_DIR.main:app --host 0.0.0.0 --port 8000 --workers 2 --reload
+    - ls -l $SERVER_DIR/
   only:
     - main
 
