--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "7.1.2"
 flake8 = "^4.0.1"
 flake8-builtins = "^1.5.3"
 flake8-docstrings = "^1.6.0"
