--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,13 @@ fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
-pytest = "7.1.2"
+pytest = "^7.1.2"
 flake8 = "^4.0.1"
-flake8-builtins = "^1.5.3"
-flake8-docstrings = "^1.6.0"
-flake8-quotes = "^3.3.1"
 toml = "^0.10.2"
 mypy = "^0.960"
+flake8-docstrings = "^1.6.0"
+flake8-quotes = "^3.3.1"
+flake8-builtins = "^1.5.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
