исправление конфигурационных файлов

--- a/pptpd_admin/Makefile
+++ b/pptpd_admin/Makefile
@@ -1,6 +1,6 @@
 .PHONY: dev
 
-run:
+server:
 	uvicorn main:app --reload --host 0.0.0.0 --port 8000 --workers 2
 
 dev:
@@ -9,5 +9,5 @@ dev:
 stage:
 	docker build . -t $(tag)
 
-start_container:
-	docker run --rm --name app -it -d -p 8000:8000 server
+run:
+	docker run --rm --name app -d -p 8000:8000 server
