--- a/pptpd_admin/Dockerfile
+++ b/pptpd_admin/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3.10
 
-COPY . /
+RUN apt update
+
+COPY . /app
+WORKDIR /app
+
 RUN pip3 install -r requirements.txt
 EXPOSE 8000
-CMD uvicorn main:app --host 0.0.0.0 --port 8000 --workers 2 --reload
+ENTRYPOINT bash entrypoint.sh
