--- a/pptpd_admin/Dockerfile
+++ b/pptpd_admin/Dockerfile
@@ -1,10 +1,13 @@
 FROM python:3.10
 
+ARG p=8000
+ENV PORT=$p
+
 RUN apt update
 
 COPY . /app
 WORKDIR /app
 
 RUN pip3 install -r requirements.txt
-EXPOSE 8000
-ENTRYPOINT bash entrypoint.sh
+EXPOSE ${PORT}
+ENTRYPOINT uvicorn main:app --host 0.0.0.0 --port ${PORT} --workers 2 --reload
