--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "vite": "^3.0.7"
   }
 }
